--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,1 @@
-nav a {
-    text-decoration: none;
-    margin-right: 15px;
-    color: blue;
-    cursor: pointer;
-  }
-  nav a:hover {
-    text-decoration: underline;
-  }
-  
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
