--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,41 @@
-<p>employee works!</p>
+<div class="container mt-3">
+    <div class="d-flex justify-content-between align-items-center">
+        <h3>Employee List</h3>
+        <button class="btn btn-danger btn-sm" (click)="signOut()">Sign Out</button>
+    </div>
+    <table class="table table-bordered table-hover mt-3">
+        <thead class="table-light">
+            <tr>
+            <th scope="col">#</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Gender</th>
+            <th scope="col">Designation</th>
+            <th scope="col">Department</th>
+            <th scope="col">Salary</th>
+            <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let employee of employees; let i = index">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>{{ employee.first_name }}</td>
+            <td>{{ employee.last_name }}</td>
+            <td>{{ employee.email }}</td>
+            <td>{{ employee.gender }}</td>
+            <td>{{ employee.designation }}</td>
+            <td>{{ employee.department }}</td>
+            <td>${{ employee.salary }}</td>
+            <td>
+                <button class="btn btn-info btn-sm me-1" (click)="viewDetails(employee.id)">View</button>
+                <button class="btn btn-warning btn-sm me-1" (click)="editEmployee(employee.id)">Edit</button>
+                <button class="btn btn-danger btn-sm" (click)="deleteEmployee(employee.id)">Delete</button>
+            </td>
+            </tr>
+            <tr *ngIf="employees.length === 0">
+            <td colspan="9" class="text-center">No employees found</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
