--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,12 +1,37 @@
-<div class="container mt-3">
+<div class="container mt-4">
     <div class="row align-items-center mb-3">
         <div class="col-12 text-center">
             <h3>Employee List</h3>
         </div>
+    </div>
+
+    <!-- Search -->
+    <div class="row mb-3">
+        <div class="col-md-5">
+        <input
+            type="text"
+            class="form-control"
+            placeholder="Search by Designation"
+            [(ngModel)]="searchDesignation"
+        />
         </div>
+        <div class="col-md-5">
+        <input
+            type="text"
+            class="form-control"
+            placeholder="Search by Department"
+            [(ngModel)]="searchDepartment"
+        />
+        </div>
+        <div class="col-md-2">
+        <button class="btn btn-primary w-100" (click)="fetchEmployees(searchDesignation, searchDepartment)">
+            Search
+        </button>
+        </div>
+    </div>
     
-        <!-- Buttons -->
-        <div class="row justify-content-between align-items-center mb-3">
+    <!-- Buttons -->
+    <div class="row justify-content-between align-items-center mb-3">
         <div class="col-auto">
             <button class="btn btn-primary" (click)="addEmployee()">Add Employee</button> <!-- Add Employee button -->
         </div>
