--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -45,6 +45,7 @@
         <thead class="table-light">
             <tr>
             <th scope="col">#</th>
+            <th scope="col">Employee Photo</th>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
             <th scope="col">Email</th>
@@ -58,6 +59,9 @@
         <tbody>
             <tr *ngFor="let employee of employees; let i = index">
             <th scope="row">{{ i + 1 }}</th>
+            <td>
+                <img *ngIf="employee.employee_photo" [src]="employee.employee_photo" alt="Employee Image" class="img-thumbnail" width="100">
+            </td>              
             <td>{{ employee.first_name }}</td>
             <td>{{ employee.last_name }}</td>
             <td>{{ employee.email }}</td>
